fix(portfolio): update job title to AI Engineer and adjust image height
- Change title and description in index.html to "AI Engineer" from "AI Specialist"
- Modify main headline to split "AI Engineer" and "Full-Stack Dev" into separate lines
- Increase portrait image height from 520px to 580px and adjust margin-top
- Update footer text to reflect "Full-Stack Developer & AI Engineer" role instead of "AI Specialist"

--- a/index.html
+++ b/index.html
@@ -1,8 +1,8 @@
 <html lang="fr" class="scroll-smooth"><head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Joel ADZONYA — Full-Stack Developer & AI Specialist</title>
-  <meta name="description" content="Portfolio personnel — Full-Stack Developer & AI Specialist">
+  <title>Joel ADZONYA — Full-Stack Developer & AI Engineer</title>
+  <meta name="description" content="Portfolio personnel — Full-Stack Developer & AI Engineer">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" cADZONYAorigin="">
   <!-- Inter (sans), Fraunces (serif display) -->
@@ -86,7 +86,10 @@
             Hi, I’m <span class="font-semibold">Joel</span>
           </h1>
           <p class="serif italic text-[48px] md:text-[72px] lg:text-[88px] tracking-tight -mt-2 text-neutral-900">
-            Full-Stack Developer & AI Specialist
+            AI Engineer &  
+          </p>
+          <p class="serif italic text-[48px] md:text-[72px] lg:text-[88px] tracking-tight -mt-2 text-neutral-900">
+            Full-Stack Dev
           </p>
 
           <div class="mt-6 grid grid-cols-1 sm:grid-cols-2 gap-4">
@@ -124,7 +127,7 @@
 
         <div class="md:col-span-5 relative">
           <div class="relative rounded-[28px] overflow-hidden border border-neutral-100 shadow-2xl bg-white">
-            <img src="joel.png" alt="Portrait" class="w-full h-[520px] object-cover object-top -mt-16">
+            <img src="joel.png" alt="Portrait" class="w-full h-[580px] object-cover object-top -mt-10">
             <div class="absolute bottom-4 right-4">
               <a href="#contact" class="inline-flex items-center gap-2 rounded-full bg-white/90 backdrop-blur px-4 py-2 text-sm text-neutral-900 shadow">
                 <i data-lucide="message-circle" class="w-4 h-4 text-lime-600"></i>
@@ -353,7 +356,7 @@
             <a href="#" class="inline-flex items-center justify-center w-9 h-9 rounded-full bg-white border border-neutral-200"><i data-lucide="instagram" class="w-4 h-4"></i></a>
             <a href="#" class="inline-flex items-center justify-center w-9 h-9 rounded-full bg-white border border-neutral-200"><i data-lucide="twitter" class="w-4 h-4"></i></a>
             <a href="#" class="inline-flex items-center justify-center w-9 h-9 rounded-full bg-white border border-neutral-200"><i data-lucide="github" class="w-4 h-4"></i></a>
-            <span class="ml-auto text-sm text-neutral-500">Full-Stack Developer & AI Specialist</span>
+            <span class="ml-auto text-sm text-neutral-500">Full-Stack Developer & AI Engineer</span>
           </div>
         </div>
 
