style(profile): update partner logos and skill levels- Replace placeholder partner logos with actual company logos at varied heights

--- a/index.html
+++ b/index.html
@@ -117,11 +117,11 @@
           </div>
 
           <div class="mt-10 flex items-center gap-8 opacity-80">
-            <img src="https://dummyimage.com/88x28/efefef/aaa&amp;text=FocalPoint" alt="FocalPoint" class="h-6 object-contain">
-            <img src="https://dummyimage.com/92x28/efefef/aaa&amp;text=Screentime" alt="Screentime" class="h-6 object-contain">
-            <img src="https://dummyimage.com/84x28/efefef/aaa&amp;text=Segment" alt="Segment" class="h-6 object-contain">
-            <img src="https://dummyimage.com/96x28/efefef/aaa&amp;text=Shutterframe" alt="Shutterframe" class="h-6 object-contain">
-            <img src="https://dummyimage.com/84x28/efefef/aaa&amp;text=Lightspeed" alt="Lightspeed" class="h-6 object-contain">
+            <img src="logoh.png" alt="HubCity" class="h-8 object-contain">
+            <img src="skollab.png" alt="Skollab" class="h-8 object-contain">
+            <img src="strive.png" alt="Strive" class="h-14 object-contain">
+            <img src="agriflow.png" alt="Agriflow" class="h-14 object-contain">
+            <img src="yawo.png" alt="Yawo" class="h-16 object-contain">
           </div>
         </div>
 
@@ -214,16 +214,16 @@
                 <span class="text-neutral-600">Avancé</span>
               </div>
               <div class="w-full bg-neutral-200 rounded-full h-2">
-                <div class="bg-lime-500 h-2 rounded-full" style="width: 95%"></div>
+                <div class="bg-lime-500 h-2 rounded-full" style="width: 80%"></div>
               </div>
             </div>
             <div>
               <div class="flex justify-between mb-1">
                 <span class="font-medium">JavaScript</span>
-                <span class="text-neutral-600">Avancé</span>
+                <span class="text-neutral-600">Intermédiaire</span>
               </div>
               <div class="w-full bg-neutral-200 rounded-full h-2">
-                <div class="bg-lime-500 h-2 rounded-full" style="width: 90%"></div>
+                <div class="bg-lime-500 h-2 rounded-full" style="width: 60%"></div>
               </div>
             </div>
             <div>
@@ -238,10 +238,10 @@
             <div>
               <div class="flex justify-between mb-1">
                 <span class="font-medium">Dart</span>
-                <span class="text-neutral-600">Avancé</span>
+                <span class="text-neutral-600">Intermédiaire</span>
               </div>
               <div class="w-full bg-neutral-200 rounded-full h-2">
-                <div class="bg-lime-500 h-2 rounded-full" style="width: 85%"></div>
+                <div class="bg-lime-500 h-2 rounded-full" style="width: 56%"></div>
               </div>
             </div>
           </div>
