--- a/index.html
+++ b/index.html
@@ -144,15 +144,42 @@
   <section class="relative">
     <div class="mx-auto max-w-7xl px-4 sm:px-6 lg:px-8">
       <div class="rounded-[24px] border border-lime-200 bg-white shadow-[0_10px_40px_-10px_rgba(163,230,53,0.35)] p-4 sm:p-6">
-        <div class="grid grid-cols-1 md:grid-cols-3 gap-4">
-          <div class="rounded-2xl overflow-hidden border border-neutral-100">
-            <img src="https://images.unsplash.com/photo-1621619856624-42fd193a0661?w=1080&amp;q=80" alt="Work 1" class="w-full h-56 md:h-64 object-cover">
-          </div>
-          <div class="rounded-2xl overflow-hidden border border-neutral-100">
-            <img src="https://images.unsplash.com/photo-1520607162513-77705c0f0d4a?q=80&amp;w=1600&amp;auto=format&amp;fit=crop" alt="Work 2" class="w-full h-56 md:h-64 object-cover">
-          </div>
-          <div class="rounded-2xl overflow-hidden border border-neutral-100">
-            <img src="https://images.unsplash.com/photo-1499951360447-b19be8fe80f5?q=80&amp;w=1600&amp;auto=format&amp;fit=crop" alt="Work 3" class="w-full h-56 md:h-64 object-cover">
+        <div class="overflow-hidden">
+          <div class="flex animate-marquee space-x-4">
+            <div class="flex space-x-4">
+              <div class="rounded-2xl overflow-hidden border border-neutral-100 min-w-[300px] md:min-w-[350px]">
+                <img src="carousel/Skollab.png" alt="Skollab" class="w-full h-56 md:h-64 object-cover">
+              </div>
+              <div class="rounded-2xl overflow-hidden border border-neutral-100 min-w-[300px] md:min-w-[350px]">
+                <img src="carousel/agriflow1.PNG" alt="Agriflow" class="w-full h-56 md:h-64 object-cover">
+              </div>
+              <div class="rounded-2xl overflow-hidden border border-neutral-100 min-w-[300px] md:min-w-[350px]">
+                <img src="carousel/yawo Poster(1).png" alt="Yawo" class="w-full h-56 md:h-64 object-cover">
+              </div>
+              <div class="rounded-2xl overflow-hidden border border-neutral-100 min-w-[300px] md:min-w-[350px]">
+                <img src="carousel/strive.png" alt="Strive" class="w-full h-56 md:h-64 object-cover">
+              </div>
+              <div class="rounded-2xl overflow-hidden border border-neutral-100 min-w-[300px] md:min-w-[350px]">
+                <img src="carousel/qpay(1).PNG" alt="QPay" class="w-full h-56 md:h-64 object-cover">
+              </div>
+            </div>
+            <div class="flex space-x-4">
+              <div class="rounded-2xl overflow-hidden border border-neutral-100 min-w-[300px] md:min-w-[350px]">
+                <img src="carousel/Skollab.png" alt="Skollab" class="w-full h-56 md:h-64 object-cover">
+              </div>
+              <div class="rounded-2xl overflow-hidden border border-neutral-100 min-w-[300px] md:min-w-[350px]">
+                <img src="carousel/agriflow1.PNG" alt="Agriflow" class="w-full h-56 md:h-64 object-cover">
+              </div>
+              <div class="rounded-2xl overflow-hidden border border-neutral-100 min-w-[300px] md:min-w-[350px]">
+                <img src="carousel/yawo Poster(1).png" alt="Yawo" class="w-full h-56 md:h-64 object-cover">
+              </div>
+              <div class="rounded-2xl overflow-hidden border border-neutral-100 min-w-[300px] md:min-w-[350px]">
+                <img src="carousel/strive.png" alt="Strive" class="w-full h-56 md:h-64 object-cover">
+              </div>
+              <div class="rounded-2xl overflow-hidden border border-neutral-100 min-w-[300px] md:min-w-[350px]">
+                <img src="carousel/qpay(1).PNG" alt="QPay" class="w-full h-56 md:h-64 object-cover">
+              </div>
+            </div>
           </div>
         </div>
       </div>
@@ -401,12 +428,13 @@
             <div class="absolute inset-0 bg-gradient-to-t from-black/30 to-transparent opacity-0 group-hover:opacity-100 transition"></div>
           </div>
           <div class="p-6">
-            <h4 class="text-xl tracking-tight font-semibold">Finera Dashboard</h4>
-            <p class="mt-1 text-sm text-neutral-600">Designing a scalable analytics hub for finance teams.</p>
+            <h4 class="text-xl tracking-tight font-semibold">Yawo</h4>
+            <p class="mt-1 text-sm text-neutral-600">Text to speech ewe model.</p>
             <div class="mt-4 flex flex-wrap gap-2 text-xs">
               <span class="rounded-full bg-neutral-50 border border-neutral-200 px-2.5 py-1">IA</span>
               <span class="rounded-full bg-neutral-50 border border-neutral-200 px-2.5 py-1">NLP</span>
-              <span class="rounded-full bg-neutral-50 border border-neutral-200 px-2.5 py-1">SaaS</span>
+              <span class="rounded-full bg-neutral-50 border border-neutral-200 px-2.5 py-1">TACOTRON</span>
+              <span class="rounded-full bg-neutral-50 border border-neutral-200 px-2.5 py-1">VITS</span>
             </div>
           </div>
         </article>
@@ -472,10 +500,10 @@
         <div class="rounded-3xl border border-neutral-100 bg-neutral-50/60 overflow-hidden">
           <img src="joel.png" alt="Portrait" class="w-full h-[280px] object-cover">
           <div class="flex items-center gap-4 px-4 py-3 text-neutral-700">
-            <a href="#" class="inline-flex items-center justify-center w-9 h-9 rounded-full bg-white border border-neutral-200"><i data-lucide="globe-2" class="w-4 h-4"></i></a>
-            <a href="#" class="inline-flex items-center justify-center w-9 h-9 rounded-full bg-white border border-neutral-200"><i data-lucide="instagram" class="w-4 h-4"></i></a>
-            <a href="#" class="inline-flex items-center justify-center w-9 h-9 rounded-full bg-white border border-neutral-200"><i data-lucide="twitter" class="w-4 h-4"></i></a>
-            <a href="#" class="inline-flex items-center justify-center w-9 h-9 rounded-full bg-white border border-neutral-200"><i data-lucide="github" class="w-4 h-4"></i></a>
+            <a href="https://strivenew.com" class="inline-flex items-center justify-center w-9 h-9 rounded-full bg-white border border-neutral-200"><i data-lucide="globe-2" class="w-4 h-4"></i></a>
+            <a href="https://www.instagram.com/joel_elise_a/" class="inline-flex items-center justify-center w-9 h-9 rounded-full bg-white border border-neutral-200"><i data-lucide="instagram" class="w-4 h-4"></i></a>
+            <a href="https://www.linkedin.com/in/elisée-joel-adzonya" class="inline-flex items-center justify-center w-9 h-9 rounded-full bg-white border border-neutral-200"><i data-lucide="linkedin" class="w-4 h-4"></i></a>
+            <a href="https://github.com/joel710" class="inline-flex items-center justify-center w-9 h-9 rounded-full bg-white border border-neutral-200"><i data-lucide="github" class="w-4 h-4"></i></a>
             <span class="ml-auto text-sm text-neutral-500">Full-Stack Developer & AI Engineer</span>
           </div>
         </div>
@@ -570,5 +598,17 @@
       if (e.target === mobileMenu.firstElementChild) overlayClose();
     });
   </script>
+
+  <style>
+    @keyframes marquee {
+      0% { transform: translateX(0); }
+      100% { transform: translateX(-50%); }
+    }
+    .animate-marquee {
+      display: flex;
+      width: 200%;
+      animation: marquee 30s linear infinite;
+    }
+  </style>
 
 </body></html>
