feat(landingpage): add downloadable CV link with updated text and icon- Changed the link href to point to a downloadable CV file- Updated the download attribute with a specific filename- Replaced icon from play to download for clarity- Changed link text to French Télécharger mon CV to match content context- Maintained existing styling and button layout for consistency

--- a/index.html
+++ b/index.html
@@ -110,9 +110,9 @@
               <span>Get in Touch</span>
               <i data-lucide="arrow-right" class="w-4 h-4"></i>
             </a>
-            <a href="#work" class="inline-flex items-center gap-2 rounded-full border border-neutral-200 bg-white px-5 py-3 text-sm text-neutral-900 shadow-sm hover:shadow transition">
-              <i data-lucide="play" class="w-4 h-4"></i>
-              View Work
+            <a href="CV_joel.pdf" download="Joel_Adzonya_CV.md" class="inline-flex items-center gap-2 rounded-full border border-neutral-200 bg-white px-5 py-3 text-sm text-neutral-900 shadow-sm hover:shadow transition">
+              <i data-lucide="download" class="w-4 h-4"></i>
+              <span>Télécharger mon CV</span>
             </a>
           </div>
 
