feat(ui): update accolades and client testimonials with French content- Replace trophy icon and text with award icon and Ingénieur IA Certifié AWS label- Update first testimonial author to Cédric Joseph, Directeur Technique with initial-based avatar- Change second testimonial text to French quotation about AI solution impact- Update second testimonial author to KANTE, Chef de Produit with initial-based avatar

--- a/index.html
+++ b/index.html
@@ -74,8 +74,8 @@
       <div class="flex items-center justify-between">
         <div class="flex items-center gap-3">
           <span class="inline-flex items-center gap-2 rounded-full border border-neutral-200 bg-white/70 backdrop-blur px-3 py-1 text-xs text-neutral-700 shadow-sm">
-            <i data-lucide="trophy" class="w-4 h-4 text-lime-600"></i>
-            Google Website Of The Day 2026
+            <i data-lucide="award" class="w-4 h-4 text-lime-600"></i>
+            Ingénieur IA Certifié AWS
           </span>
         </div>
       </div>
@@ -393,20 +393,24 @@
         <blockquote class="rounded-3xl border border-neutral-100 bg-white p-6 shadow-sm">
           <p class="text-neutral-800">“Working with Joel was seamless from start to finish. His curiosity and design clarity scaled our B2B experience and elevated our brand.”</p>
           <div class="mt-4 flex items-center gap-3">
-            <img class="h-10 w-10 rounded-full object-cover" src="https://images.unsplash.com/photo-1599566150163-29194dcaad36?q=80&amp;w=400&amp;auto=format&amp;fit=crop" alt="Client">
+            <div class="h-10 w-10 rounded-full bg-gradient-to-br from-lime-400 to-lime-600 flex items-center justify-center">
+              <span class="text-white font-medium text-sm">CJ</span>
+            </div>
             <div>
-              <div class="text-sm font-medium">Daniel Reed</div>
-              <div class="text-xs text-neutral-500">Product Executive</div>
+              <div class="text-sm font-medium">Cédric Joseph</div>
+              <div class="text-xs text-neutral-500">Directeur Technique</div>
             </div>
           </div>
         </blockquote>
         <blockquote class="rounded-3xl border border-neutral-100 bg-white p-6 shadow-sm">
-          <p class="text-neutral-800">“Joel brought our product vision to life with beautiful interactions that not only made a difference — but genuinely sold.”</p>
+          <p class="text-neutral-800">"Joël a su concrétiser notre vision en développant une solution IA qui a véritablement fait la différence pour notre entreprise."</p>
           <div class="mt-4 flex items-center gap-3">
-            <img class="h-10 w-10 rounded-full object-cover" src="https://images.unsplash.com/photo-1547425260-76bcadfb4f2c?q=80&amp;w=400&amp;auto=format&amp;fit=crop" alt="Client">
+            <div class="h-10 w-10 rounded-full bg-gradient-to-br from-blue-400 to-blue-600 flex items-center justify-center">
+              <span class="text-white font-medium text-sm">K</span>
+            </div>
             <div>
-              <div class="text-sm font-medium">Sarah Nguyen</div>
-              <div class="text-xs text-neutral-500">Product Manager</div>
+              <div class="text-sm font-medium">KANTE</div>
+              <div class="text-xs text-neutral-500">Chef de Produit</div>
             </div>
           </div>
         </blockquote>
